public/css/style.css
/* ... */
.gb-left form p[data-type="bad"] {
    color: var(--dred)
}

.gb-left form input, 
.gb-left form textarea {
    font-size: 14px;
    border: 0;
    border-radius: 5px;
    padding: 5px;
}

.gb-left form textarea {
    resize: vertical
}

.gb-right {
    display: flex;
    flex-direction: column;
    flex: 1;
    gap: 5px;
}

.gb-right .gb-entry {
    padding: 5px;
    border-radius: 5px;
    background-color: rgba(0,0,0, 0.1);
}

.gb-right .gb-entry #name {
    font-size: 20px;
    color: #000
}

.gb-right .gb-entry #msg {
    padding-bottom: 8px;
    margin: 0;
    overflow-wrap: anywhere;
    word-break: break-word;
}

.gb-right .gb-entry #date {
    font-size: 12px;
}

/*          */
/** footer **/
/*          */
.footer p {
    position: fixed;
    bottom: 0.5rem;
    left: 0;
    right: 0;

    font-size: 12px;
    color: var(--text);

    text-align: center;
}

.footer p a {
    text-decoration: none;
}

.footer p a:active, .footer p a:visited {
    color: var(--text)
}

/* admin login */
.admin-login {
    text-align: center;
}

.admin-login form {
    padding-top: 15px;

    margin: auto;
    display: flex;
    flex-direction: column;
    width: 25%
}

.admin-login input {
    padding: 10px;
    border: 0;
    border-radius: 5px;
}

.admin-login input[type=submit] {
    background-color: var(--blue);
    cursor: pointer;
}

.admin-login input:not(:first-child) {
    margin-top: 5px;
}

/* admin */
.admin-c {
    width: 100%;
    display: flex;
    flex-direction: row;
    
    gap: 10px
}

.pending-list, .approved-list {
    flex: 1;
    min-width: 0;
}

.pending-list .item,
.approved-list .item {
    display: flex;
    width: 100%;
    flex-direction: row;
    padding: 5px;
    box-sizing: border-box;

    align-items: center
}

.pending-list .item .item-details,
.approved-list .item .item-details {
    flex: 1;
    min-width: 0;
    overflow-wrap: hidden;
}

.pending-list .item .item-details p,
.approved-list .item .item-details p {
    margin: 0;
    overflow-wrap: anywhere;
    word-break: break-word;
}

.pending-list .item .item-details #date,
.approved-list .item .item-details #date {
    font-size: 12px;
}

.pending-list .item .item-buttons,
.approved-list .item .item-buttons {
    flex: 0 0 20%;
    display: flex;
    flex-direction: column;
    gap: 5px;
}

.pending-list .item .item-buttons form,
.approved-list .item .item-buttons form {
    width: 100%;
    margin: 0;
}

.pending-list .item .item-buttons input,
.approved-list .item .item-buttons input {
    width: 100%;
    cursor: pointer;
}

.pending-list .item input,
.approved-list .item input {
    padding: 5px;
    border: 0;
    border-radius: 5px;
}

.pending-list .item #approve {
    background: var(--green);
}

.pending-list .item #deny,
.approved-list .item #delete {
    background: var(--red);
}

@keyframes rainbow {
    100%, 0% { color: rgb(235, 0, 0) }
    8% { color: rgb(226, 113, 0) }
    16% { color: rgb(208, 208, 0) }
    25% { color: rgb(110, 220, 0) }
    33% { color: rgb(0, 218, 0) }
    41% { color: rgb(0, 206, 103) }
    50% { color: rgb(0, 208, 208) }
    58% { color: rgb(0, 116, 232) }
    66% { color: rgb(0, 0, 225) }
    75% { color: rgb(111, 0, 222) }
    83% { color: rgb(229, 0, 229) }
    91% { color: rgb(223, 0, 112) }
}

/* MOBILE INTERACTIVITY */
@media screen and (max-width: 540px) {
    #h-deco-a, #h-deco-b {
        display: none;
    }

    .main .m-right .m-r-nav {
        grid-template-columns: 1fr;
        grid-template-rows: repeat(5, 1fr);
        grid-template-areas: 
            'a'
            'b'
            'c'
            'd'
            'e';
    }
}

@media screen and (max-width: 600px) {
    .main .m-left {
        flex: 1;
    }

    .header-nav {
        display: flex;
        flex-wrap: wrap;
    }
    
    .h-n-box {
        flex: 1 1 calc(50% - 10px);
    }

    .guestbook {
        flex-direction: column;
        align-self: normal;
        gap: 10px;
    }

    .guestbook .gb-left {
        width: calc(100% - 20px);
    }

    .guestbook .gb-left,
    .guestbook .gb-right {

        flex: 1;
    }
}

